[project]
name = "sanic-api"
version = "0.2.5"
description = "Sanic 框架实用API工具集，拥有自动生成文档、参数校验、配置的导入、日志功能的优化等功能，更好的助力接口的开发"
authors = [
    { name = "昊色居士", email = "xhrtxh@gmail.com" },
]
dependencies = [
    "sanic>=22.3",
    "pydantic[dotenv]>=1.10.2",
    "sanic-ext>=22.12",
    "loguru>=0.6.0",
    "pygments>=2.13.0",
    "ujson>=5.7.0",
    "orjson>=3.8.6",
    "setuptools>=68.0.0",
]
requires-python = ">=3.8"
readme = "README.MD"
license = { text = "MIT" }
[project.optional-dependencies]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.black]
line-length = 120


[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.0.4",
    "types-ujson>=5.7.0.0",
    "types-PyYAML>=6.0.12.2"
]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true


[tool.pdm.scripts]
check = "pdm run pre-commit run --all-files"
